[bug fix] Fix inner-wrap height in Safari
Safari needs an absolute specified height
here (the value doesn't matter).

--- a/source/css/cside.css
+++ b/source/css/cside.css
@@ -129,6 +129,7 @@ body.night input:not([readonly]), body.night textarea:not([readonly]) {
     border-color: inherit;
     width: 100%;
     flex-grow: 10;
+    flex-basis: 1px; /* prevent Safari collapsing */
 }
 
 #page-content-wrapper {
